--- a/movement.html
+++ b/movement.html
@@ -261,7 +261,7 @@
             <input type="time" id="start-time" placeholder="Start time" min="1" max="24">
             <input type="time" id="end-time" placeholder="End time" min="1" max="24">
         </div>
-        <textarea placeholder="Qual o local da contagem?..."></textarea>
+        <textarea placeholder="Notas relevantes..."></textarea>
     </div>
 </div>
 
