--- a/movement.html
+++ b/movement.html
@@ -151,13 +151,13 @@
         <div>Cadeira de Rodas</div>
     </div>
 
-    <!-- Cadeira de Rodas Elétrica -->
-    <div class="small-category" onclick="incrementCounter('counter-e-wheelchair')">
-        <div class="decrement-button" onclick="decrementCounter('counter-e-wheelchair', event)">-</div>
-        <img src="svg-export/e_wheelchair.svg" alt="Up to 5 Supported">
-        <div id="counter-e-wheelchair" class="counter">0</div>
-        <div>Cadeira de Rodas Elétrica</div>
+    <!-- Counter -->
+    <div class="small-category disabled">
+        <img src="svg-export/counter.svg" alt="Up to 5 Supported">
+        <div id="counter-e-wheelchair" class="counter"></div>
+        <div>Contador</div>
     </div>
+
 
     <!-- Criança carrinho bebé -->
     <div class="small-category" onclick="incrementCounter('counter-baby-toddler-supported')">
@@ -188,7 +188,7 @@
         <div class="decrement-button" onclick="decrementCounter('counter-blind-cane', event)">-</div>
         <img src="svg-export/blind_cane.svg" alt="Up to 5 Walking Independently">
         <div id="counter-blind-cane" class="counter">0</div>
-        <div>Cego com bengala</div>
+        <div>Pessoa cega c/ bengala</div>
     </div>
 
     <!-- Male ≤ 12 -->
